Closed
Bug 1130756
Opened 10 years ago
Closed 10 years ago
Assertion failure: frame.isDebuggee(), at vm/Debugger.cpp:1984
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla38
Tracking | Status | |
---|---|---|
firefox38 | --- | fixed |
People
(Reporter: jandem, Unassigned)
Details
Attachments
(2 files)
446 bytes,
application/x-javascript
|
Details | |
6.08 KB,
patch
|
jandem
:
review+
|
Details | Diff | Splinter Review |
Attached testcase asserts with --baseline-eager at inbound revision 9a3a666c17d7.
Reporter | ||
Updated•10 years ago
|
Flags: needinfo?(shu)
Comment 1•10 years ago
|
||
Attachment #8560927 -
Flags: review?(jdemooij)
Updated•10 years ago
|
Flags: needinfo?(shu)
Reporter | ||
Comment 2•10 years ago
|
||
Comment on attachment 8560927 [details] [diff] [review]
Set BaselineFrame's isDebuggee flag before any operation that can re-enter the VM.
Review of attachment 8560927 [details] [diff] [review]:
-----------------------------------------------------------------
Thanks for fixing this so quickly.
::: js/src/jit/BaselineCompiler.cpp
@@ +574,5 @@
> +void
> +BaselineCompiler::emitIsDebuggeeCheck()
> +{
> + if (compileDebugInstrumentation_) {
> + masm.setupUnalignedABICall(1, R0.scratchReg());
We should push/pop BaselineFrameReg before/after the call, I think it's non-volatile on ARM (r11).
Attachment #8560927 -
Flags: review?(jdemooij) → review+
Comment 3•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox38:
--- → fixed
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
You need to log in
before you can comment on or make changes to this bug.
Description
•