Bug 1130756 - Set BaselineFrame's isDebuggee flag before any operation that can re-enter the VM. (r=jandem)